<resources>
    <string name="app_name">My Application</string>
    <string name="number_participant">인원수</string>
    <string name="want_day">요일</string>
    <string name="update_time">등록 시간</string>
    <string name="upload_meeting">글쓰기</string>
    <string name="upload_title">제목 : </string>
    <string name="upload_contents">내용 : </string>
    <string name="upload_place1">장소1 : (왕십리역) </string>
    <string name="upload_place2">장소2 : </string>
    <string name="upload_place3">장소3 : </string>

    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="no_matter">무관</string>

    <string name="text_student">대학생</string>
    <string name="text_job">직장인</string>
    <string name="text_district">지역</string>
    <string name="text_apply">신청하기</string>
    <string name="text_meeting_category">게시판 종류</string>

    <string name="want_place">장소</string>


    <string name="district_0">무관</string>
    <string name="district_1">서울</string>
    <string name="district_2">인천</string>
    <string name="district_3">대전</string>
    <string name="district_4">대구</string>
    <string name="district_5">울산</string>
    <string name="district_6">부산</string>
    <string name="district_7">광주</string>
    <string name="district_8">세종</string>
    <string name="district_9">경기도</string>
    <string name="district_10">강원도</string>
    <string name="district_11">충청북도</string>
    <string name="district_12">충청남도</string>
    <string name="district_13">전라북도</string>
    <string name="district_14">전라남도</string>
    <string name="district_15">경상북도</string>
    <string name="district_16">경상남도</string>
    <string name="district_17">제주도</string>



</resources>