<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/basic_dialog">

    <TextView
        style="@style/text_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="지역 설정"
        android:id="@+id/m2_meeting_option_district_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/basic_margin_inside"
        app:layout_constraintTop_toBottomOf="@id/m2_meeting_option_district_title"
        android:layout_width="match_parent"
        android:id="@+id/m2_meeting_option_district_clo1"
        android:maxHeight="250dp"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn0"
                    android:text="@string/district_0"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn1"
                    android:text="@string/district_1"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn2"
                    android:text="@string/district_2"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn3"
                    android:text="@string/district_3"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn4"
                    android:text="@string/district_4"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn5"
                    android:text="@string/district_5"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn6"
                    android:text="@string/district_6"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn7"
                    android:text="@string/district_7"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn8"
                    android:text="@string/district_8"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn9"
                    android:text="@string/district_9"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn10"
                    android:text="@string/district_10"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn11"
                    android:text="@string/district_11"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn12"
                    android:text="@string/district_12"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn13"
                    android:text="@string/district_13"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn14"
                    android:text="@string/district_14"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn15"
                    android:text="@string/district_15"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn16"
                    android:text="@string/district_16"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/m2_meeting_option_district_btn17"
                    android:text="@string/district_17"
                    tools:ignore="RtlSymmetry"
                    android:button="@drawable/custom_checkbox"
                    android:paddingVertical="7.5dp"
                    android:paddingStart="@dimen/basic_margin_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RadioGroup>


        </androidx.core.widget.NestedScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/m2_meeting_option_district_clo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        style="@style/text_big"
        tools:text="서울"
        android:id="@+id/m2_meeting_option_district_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/m2_meeting_option_district_text"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/text_button_clickable_white"
            android:text="취소"
            android:layout_width="wrap_content"
            android:id="@+id/m2_meeting_option_district_btn_no"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/text_button_clickable_red_light"
            android:text="확인"
            android:layout_width="wrap_content"
            android:id="@+id/m2_meeting_option_district_btn_ok"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>